--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 11:49:00 AM</p>
+    <p class="lastupdate">09/03/2020 11:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.973 inHg (-0.052)</td>
+        <td class="data">29.973 inHg (-0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NW (315&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.4&#176;F</td>
+        <td class="data">76.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">51%</td>
+        <td class="data">50%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:34 AM">
-            83.9</span><br/>
+          <span title="11:53:42 AM">
+            84.6</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:34 AM" class="hival">
-            83.9</span>
+          <span title="11:53:42 AM" class="hival">
+            84.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:37:07 AM">
             93</span><br/>
-          <span title="11:43:46 AM">
-            41</span>
+          <span title="11:52:18 AM">
+            40</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:47:02 AM">
-            76.4</span><br/>
+          <span title="11:51:02 AM">
+            76.5</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 21 hours, 3 minutes</td>
+      <td class="data">1 day, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 21 hours, 2 minutes</td>
+      <td class="data">1 day, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
