--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/03/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">85.4<br/>
-            <span class="timestamp">11:59:00 AM</span><br/>
+          <td class="data new_row">86.3<br/>
+            <span class="timestamp">12:03:36 PM</span><br/>
             54.7<br/>
             <span class="timestamp">05:52:55 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">85.4<br/>
-            <span class="timestamp">11:59:00 AM</span>
+          <td class="data new_row">86.3<br/>
+            <span class="timestamp">12:03:36 PM</span>
           </td>
           <td class="data new_row">94.1<br/>
             <span class="timestamp">01:20:51 PM (Sunday)</span>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">93<br/>
             <span class="timestamp">06:37:07 AM</span><br/>
-            39<br/>
-            <span class="timestamp">11:57:26 AM</span>
+            36<br/>
+            <span class="timestamp">12:03:24 PM</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">06:37:07 AM (Thursday)</span><br/>
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">30.035<br/>
             <span class="timestamp">08:26:02 AM</span><br/>
-            29.972<br/>
-            <span class="timestamp">11:54:02 AM</span>
+            29.963<br/>
+            <span class="timestamp">12:03:02 PM</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             2<br/>
-            3
+            4
           </td>
           <td class="data new_row">
             1<br/>
@@ -343,7 +343,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            169
+            168
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            76.7<br/>
-            <span class="timestamp">11:56:02 AM</span><br/>
+            76.9<br/>
+            <span class="timestamp">12:02:02 PM</span><br/>
             68.2<br/>
             <span class="timestamp">06:56:02 AM</span>
           </td>
