--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/03/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">86.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">86.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">86.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.2&#176;F</td>
+        <td class="data">57.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">37%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (-0.064)</td>
+        <td class="data">29.962 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.9&#176;F</td>
+        <td class="data">77.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:36 PM">
-            86.3</span><br/>
+          <span title="12:08:44 PM">
+            86.9</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:36 PM" class="hival">
-            86.3</span>
+          <span title="12:08:44 PM" class="hival">
+            86.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="12:03:02 PM">
-            29.963</span>
+          <span title="12:08:02 PM">
+            29.962</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:02 PM">
-            76.9</span><br/>
+          <span title="12:08:02 PM">
+            77.1</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 21 hours, 17 minutes</td>
+      <td class="data">1 day, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 21 hours, 17 minutes</td>
+      <td class="data">1 day, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
