--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 12:24:00 PM</p>
+    <p class="lastupdate">09/03/2020 12:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.4&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.956 inHg (-0.069)</td>
+        <td class="data">29.953 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.5&#176;F</td>
+        <td class="data">77.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:56 PM">
-            89.2</span><br/>
+          <span title="12:28:24 PM">
+            89.9</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:56 PM" class="hival">
-            89.2</span>
+          <span title="12:28:24 PM" class="hival">
+            89.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:20:51 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:37:07 AM">
             93</span><br/>
-          <span title="12:23:02 PM">
-            32</span>
+          <span title="12:28:10 PM">
+            31</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -283,8 +283,8 @@
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/02/2020 02:08:30 PM">
-            32</span>
+          <span title="09/03/2020 12:28:10 PM">
+            31</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="12:22:02 PM">
-            29.954</span>
+          <span title="12:28:02 PM">
+            29.953</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          168
+          167
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:20:02 PM">
-            77.5</span><br/>
+          <span title="12:26:02 PM">
+            77.7</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 21 hours, 37 minutes</td>
+      <td class="data">1 day, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 21 hours, 37 minutes</td>
+      <td class="data">1 day, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
